--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,29 @@
 
 default: &default
   adapter: postgresql
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") {5}%>
   timeout: 5000
-
-development:
-  adapter: postgresql
   username: root
   password: root
-  host: 127.0.0.1
+
+development:
+ <<: *default
   database: Agenda
-  encoding: UTF8
+  username: root
+  password: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/my_app_test
+    database: Agenda
+    username: root
+    password: root
+
 
 production:
   <<: *default
-  database: db/my_app_productionn
+    database: Agenda
+    username: root
+    password: <%= ENV["PROJECT_PASSWORD"] {5}%>
