--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
 development:
   <<: *default
   adapter: postgresql
-  database: dbMultas
+  database: dbSeguimiento
   username: root
   password: root
 
@@ -19,7 +19,7 @@ development:
 test:
     <<: *default
     adapter: postgresql
-    database: dbMultas
+    database: dbSeguimiento
     username: root
     password: root
 
@@ -27,6 +27,6 @@ test:
 production:
     <<: *default
     adapter: postgresql
-    database: dbMultas
+    database: dbSeguimiento
     username: root
     password: <%= ENV['PROJECT_PASSWORD']%>
